# OpenMowerNext

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile
.github/workflows/: build.yml  deploy.yml  lint.yml  verify.yml
src/docking_helper/: docking_helper_node.cpp  docking_helper_node.hpp
src/ftc_local_planner/: CMakeLists.txt  ftc_planner_plugin.xml  package.xml
src/ftc_local_planner/include/ftc_local_planner/: ftc_planner.hpp  oscillation_detector.hpp
src/ftc_local_planner/src/: ftc_planner.cpp
src/ftc_local_planner_msgs/: CMakeLists.txt  package.xml
src/ftc_local_planner_msgs/msg/: PID.msg
src/ftc_local_planner_msgs/srv/: PlannerGetProgress.srv
src/map_server/: geo_json_map.cpp  geo_json_map.hpp  map_server_node.cpp  map_server_node.hpp  node_main.cpp
src/mower_logic/: CMakeLists.txt  package.xml
src/mower_logic/include/mower_logic/: state_subscriber.hpp
src/mower_logic/include/mower_logic/behaviors/: area_recording_behavior.hpp  behavior.hpp  docking_behavior.hpp  idle_behavior.hpp  mowing_behavior.hpp  perimeter_docking.hpp  undocking_behavior.hpp
src/mower_logic/src/: mower_logic_node.cpp
src/mower_logic/src/behaviors/: area_recording_behavior.cpp  docking_behavior.cpp  idle_behavior.cpp  mowing_behavior.cpp  perimeter_docking.cpp  undocking_behavior.cpp
src/mower_logic_msgs/: CMakeLists.txt  package.xml
src/mower_logic_msgs/msg/: CheckPoint.msg
src/mower_map_msgs/: CMakeLists.txt  package.xml
src/mower_map_msgs/msg/: MapArea.msg
src/mower_map_msgs/srv/: AddMowingAreaSrv.srv  ClearMapSrv.srv  ClearNavPointSrv.srv  GetDockingPointSrv.srv  GetMowingAreaSrv.srv  SetDockingPointSrv.srv  SetNavPointSrv.srv
src/mower_msgs/: CMakeLists.txt  package.xml
src/mower_msgs/msg/: DockingSensor.msg  ESCStatus.msg  Emergency.msg  HighLevelStatus.msg  ImuRaw.msg  Perimeter.msg  Power.msg  Status.msg
src/mower_msgs/srv/: EmergencyStopSrv.srv  GPSControlSrv.srv  HighLevelControlSrv.srv  MowerControlSrv.srv  PerimeterControlSrv.srv
src/sim/: node_main.cpp
src/slic3r_coverage_planner/: CMakeLists.txt  package.xml
src/slic3r_coverage_planner/src/: coverage_planner_node.cpp
src/slic3r_coverage_planner_msgs/: CMakeLists.txt  package.xml
src/slic3r_coverage_planner_msgs/msg/: Path.msg
src/slic3r_coverage_planner_msgs/srv/: PlanPath.srv
src/vesc_driver/: CMakeLists.txt  package.xml
src/vesc_driver/include/vesc_driver/: data_map.hpp  vesc_driver.hpp  vesc_interface.hpp  vesc_packet.hpp  vesc_packet_factory.hpp
src/vesc_driver/src/: vesc_driver.cpp  vesc_interface.cpp  vesc_packet.cpp  vesc_packet_factory.cpp
src/xbot_monitoring/: CMakeLists.txt  package.xml
src/xbot_monitoring/include/xbot_monitoring/: capabilities.hpp
src/xbot_monitoring/src/: xbot_monitoring_node.cpp  xbot_sensor_example_node.cpp
src/xbot_msgs/: CMakeLists.txt  package.xml
src/xbot_msgs/msg/: AbsolutePose.msg  ActionInfo.msg  MapOverlay.msg  MapOverlayPolygon.msg  MapSize.msg  RobotState.msg  SensorDataDouble.msg  SensorDataString.msg  SensorInfo.msg  WheelTick.msg
src/xbot_msgs/srv/: RegisterActionsSrv.srv
src/xbot_positioning/: CMakeLists.txt  package.xml
src/xbot_positioning/include/kalman/: ExtendedKalmanFilter.hpp  KalmanFilterBase.hpp  LinearizedMeasurementModel.hpp  LinearizedSystemModel.hpp  Matrix.hpp  MeasurementModel.hpp  SquareRootBase.hpp  SquareRootExtendedKalmanFilter.hpp  SquareRootFilterBase.hpp  SquareRootUnscentedKalmanFilter.hpp  StandardBase.hpp  StandardFilterBase.hpp  SystemModel.hpp  Types.hpp  UnscentedKalmanFilter.hpp  UnscentedKalmanFilterBase.hpp
src/xbot_positioning/include/xbot_positioning/: OrientationMeasurementModel.hpp  OrientationMeasurementModel2.hpp  PositionMeasurementModel.hpp  SpeedMeasurementModel.hpp  SystemModel.hpp  xbot_positioning_core.hpp
src/xbot_positioning/src/: OrientationMeasurementModel.hpp  OrientationMeasurementModel2.hpp  PositionMeasurementModel.hpp  SpeedMeasurementModel.hpp  SystemModel.hpp  xbot_positioning_core.cpp  xbot_positioning_core.h  xbot_positioning_node.cpp
src/xbot_positioning_msgs/: CMakeLists.txt  package.xml
src/xbot_positioning_msgs/msg/: KalmanState.msg
src/xbot_positioning_msgs/srv/: GPSControlSrv.srv  SetPoseSrv.srv
src/xbot_remote/: CMakeLists.txt  package.xml
src/xbot_remote/src/: xbot_remote_node.cpp
src/xbot_rpc/: CMakeLists.txt  package.xml
src/xbot_rpc/include/xbot_rpc/: constants.hpp  provider.hpp
src/xbot_rpc/src/: provider.cpp
src/xbot_rpc_msgs/: CMakeLists.txt  package.xml
src/xbot_rpc_msgs/msg/: RpcError.msg  RpcRequest.msg  RpcResponse.msg
src/xbot_rpc_msgs/srv/: RegisterMethodsSrv.srv
src/xesc_2040_driver/: CMakeLists.txt  package.xml
src/xesc_2040_driver/include/xesc_2040_driver/: cobs.hpp  xesc_2040_datatypes.hpp  xesc_2040_driver.hpp  xesc_2040_interface.hpp
src/xesc_2040_driver/src/: xesc_2040_driver.cpp  xesc_2040_interface.cpp
src/xesc_driver/: CMakeLists.txt  package.xml
src/xesc_driver/include/xesc_driver/: xesc_driver.hpp
src/xesc_driver/src/: xesc_driver.cpp  xesc_driver_node.cpp
src/xesc_interface/: CMakeLists.txt  package.xml
src/xesc_interface/include/xesc_interface/: xesc_interface.hpp
src/xesc_msgs/: CMakeLists.txt  package.xml
src/xesc_msgs/msg/: XescState.msg  XescStateStamped.msg
src/xesc_yfr4_driver/: CMakeLists.txt  package.xml
src/xesc_yfr4_driver/include/xesc_yfr4_driver/: cobs.hpp  xesc_yfr4_datatypes.hpp  xesc_yfr4_driver.hpp  xesc_yfr4_interface.hpp
src/xesc_yfr4_driver/src/: xesc_yfr4_driver.cpp  xesc_yfr4_interface.cpp
