<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slic3r_coverage_planner_msgs</name>
  <version>2.0.0</version>
  <description>
    Message and service definitions for the Slic3r-based coverage planner.
    
    Contains:
    - Path message for coverage path segments (outline vs fill)
    - PlanPath service for generating coverage plans
    
    Supports linear and concentric fill patterns for mowing area coverage.
    
    Ported from open_mower_ros (ROS1) to ROS2.
  </description>
  
  <maintainer email="openmower@example.com">OpenMower Team</maintainer>
  <license>Apache-2.0</license>
  
  <author>Clemens Elflein</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
