<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xbot_monitoring</name>
  <version>2.0.0</version>
  <description>XBot monitoring and MQTT bridge for OpenMower - ROS2 port</description>
  <maintainer email="clemens.elflein@googlemail.com">Clemens Elflein</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>xbot_msgs</depend>
  <depend>xbot_rpc_msgs</depend>
  <depend>nlohmann-json-dev</depend>

  <!-- Optional: MQTT support -->
  <build_depend condition="$HAVE_PAHO_MQTT">libpaho-mqtt-dev</build_depend>
  <build_depend condition="$HAVE_PAHO_MQTT">paho-mqtt-cpp</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
