<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xbot_msgs</name>
  <version>2.0.0</version>
  <description>
    XBot message definitions for OpenMower.
    
    Contains message types for:
    - Absolute pose (GPS, sensor fusion)
    - Action information
    - Map overlay visualization
    - Map size
    - Robot state
    - Sensor data (double and string values)
    - Sensor information/metadata
    - Wheel tick encoders
    
    And services for:
    - Action registration
    
    Ported from open_mower_ros (ROS1) to ROS2.
  </description>
  
  <maintainer email="openmower@example.com">OpenMower Team</maintainer>
  <license>Apache-2.0</license>
  
  <author>Clemens Elflein</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
