<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xbot_rpc</name>
  <version>0.1.0</version>
  <description>
    ROS2 RPC provider library for JSON-RPC communication.
    Ported from open_mower_ros (ROS1) for OpenMowerNext.
  </description>
  <maintainer email="openmower@openmower.org">OpenMower Team</maintainer>
  <license>BSD-3-Clause</license>

  <author email="clemens@2040.io">Clemens Elflein</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>xbot_rpc_msgs</depend>
  <depend>nlohmann-json-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
